[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlBuffer",
    "HtmlImageElement",
] } 
