[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
    'Performance',
    'PerformanceTiming',
    'WebGlUniformLocation',
    'WebGlActiveInfo',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
]
fontdue = "0.7.3"
